--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "eslint-plugin-relay": "^1.0.0"
+    "eslint-plugin-relay": "^1.0.0",
+    "flow-bin": "^0.87.0"
   }
 }
