--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "eslint-plugin-relay": "^1.0.0",
-    "flow-bin": "^0.87.0"
+    "flow-bin": "^0.87.0",
+    "flow-language-server": "^0.6.0",
+    "prettier": "1.15.3"
+  },
+  "peerDependencies": {
+    "react-native": "^0.57.8"
   }
 }
